2013-01-25  Frank Siegert  <frank.siegert@cern.ch>

	* Split MC_*JETS analyses into three separate bits:
	MC_*INC (inclusive properties)
	MC_*JETS (jet properties)
	MC_*KTSPLITTINGS (kT splitting scales).

2013-01-22  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix TeX variable in the rivetenv scripts, especially for csh

2012-12-21  Andy Buckley  <andy.buckley@cern.ch>

	* Version 1.8.2 release!

2012-12-20  Andy Buckley  <andy.buckley@cern.ch>

	* Adding ATLAS_2012_I1119557 analysis (from Roman Lysak and Lily Asquith).

2012-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Adding TOTEM_2012_002 analysis, from Sercan Sen.

2012-12-18  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2011_I954992 analysis

2012-12-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_I1193338 analysis

	* Fixed xi cut in ATLAS_2011_I894867

2012-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding analysis descriptions to the HTML analysis page ToC.

2012-12-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_PAS_FWD_11_003 analysis

	* Added LHCB_2012_I1119400 analysis

2012-12-12  Andy Buckley  <andy.buckley@cern.ch>

	* Correction to jet acceptance in CMS_2011_S9120041, from Sercan Sen: thanks!

2012-12-12  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_PAS_QCD_11_010 analysis

2012-12-07  Andy Buckley  <andy.buckley@cern.ch>

	* Version number bump to 1.8.2 -- release approaching.

	* Rewrite of ALICE_2012_I1181770 analysis to make it a bit more sane and acceptable.

	* Adding a note on FourVector and FourMomentum that operator- and
	operator-= invert both the space and time components: use of -=
	can result in a vector with negative energy.

	* Adding particlesByRapidity and particlesByAbsRapidity to FinalState.

2012-12-07  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ALICE_2012_I1181770 analysis

	* Bump version to 1.8.2

2012-12-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1188891 analysis
